# kirin

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.example.toml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
assets/: input.css
docs/: ARCHITECTURE.md
locales/: en.toml  fr.toml  ja.toml
src/: app.rs  config.rs  error.rs  expiry.rs  lib.rs  main.rs  models.rs  multipart_util.rs  password.rs  state.rs  static_assets.rs  templates.rs
src/i18n/: mod.rs
src/routes/: admin.rs  common.rs  download.rs  html.rs  locale.rs  mod.rs  script.rs  upload.rs  upload_async.rs
src/storage/: local_fs.rs  mod.rs
static/: app.css  style.css
templates/: admin.html  admin_login.html  base.html  delete_confirm.html  delete_done.html  download.html  download_forbidden.html  file_unavailable.html  index.html  upload_result.html
tests/: integration.rs
